syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.homo.proto.gate.test";     // 指定包名
option java_outer_classname = "TcpGateTest"; // 指定类名

message TcpMsg {
  string param = 1;
}

message TcpResp {
  string param = 1;
}

message HeartBeatMsg {
  int32 code = 1;
}